--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </div> <!-- end page -->
 
   <script type="text/javascript">
-    var specVis1 = "js/bubblechart_interactive.vg.json";
+    var specVis1 = "js/bubblechart_interactive.json";
     var specVis2 = "js/population.json";
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
