--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="pure-g">
       <div class="pure-u-1-2">
         <div class="description description-left">
-          <h2>Fertility Rate Vs Median Age</h2>
+          <h2>Fertility Rate Vs Migration</h2>
           <p>The first column contains text and the second column contains a visualisation.
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -88,6 +88,36 @@
         </div>
       </div>
 
+      <div class="pure-g">
+        <div class="pure-u-1-2">
+          <div class="description description-right">
+            <h2>Fertility Rate Vs Median Age</h2>
+            <p>The first column contains text and the second column contains a visualisation.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+          </div>
+        </div>
+        <div class="pure-u-1-2">
+          <div id="vis3" class="vis-container"></div>
+        </div>
+      </div>
+
+      <div class="pure-g">
+        <div class="pure-u-1-3">
+          <div class="description description-right">
+            <h2>Median Age</h2>
+            <p>The first column contains text and the second column contains a visualisation.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+          </div>
+        </div>
+        <div class="pure-u-2-3">
+          <div id="vis4" class="vis-container"></div>
+        </div>
+      </div>
+
     </div>
     <!-- end pure grid group -->
 
@@ -101,8 +131,10 @@
   </div> <!-- end page -->
 
   <script type="text/javascript">
-    var specVis1 = "js/bubblechart.json";
-    var specVis2 = "js/population.json";
+    var specVis1 = "js/bubblechart_interactive.vg.json";
+    var specVis2 = "js/population.vg.json";
+    var specVis3 = "js/radialplot.vg.json";
+    var specVis4 = "js/barchart.vg.json";
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
 
@@ -110,13 +142,17 @@
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
 
+    vegaEmbed('#vis3', specVis3, { "actions": false });
+
+    vegaEmbed('#vis4', specVis4, { "actions": false });
+
     // vegaEmbed('#vis3', specVis1, { "actions": false }).then(function (result) {
     //   // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     // }).catch(console.error);
 
-    vegaEmbed('#vis4', specVis2, { "actions": false }).then(function (result) {
+   // vegaEmbed('#vis4', specVis2, { "actions": false }).then(function (result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-    }).catch(console.error);
+   // }).catch(console.error);
   </script>
 </body>
 
