--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
   </div> <!-- end page -->
 
   <script type="text/javascript">
-    var specVis1 = "js/bubblechart_interactive.vg.json";
-    var specVis2 = "js/population.vg.json";
+    var specVis1 = "js/bubblechart.vg.json";
+    var specVis2 = "js/worldmap.vg.json";
     var specVis3 = "js/radialplot.vg.json";
     var specVis4 = "js/barchart.vg.json";
 
