--- a/index.html
+++ b/index.html
@@ -38,19 +38,20 @@
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
+    <div class="pure-u-1-1">
+        <h2>Fertility Rate Vs Migration</h2>
+        <div id="vis1" class="vis-container"></div>
+    
     <div class="pure-g">
       <div class="pure-u-1-2">
         <div class="description description-left">
-          <h2>Fertility Rate Vs Migration</h2>
           <p>The first column contains text and the second column contains a visualisation.
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
         </div>
       </div>
-      <div class="pure-u-1-2">
-        <div id="vis1" class="vis-container"></div>
-      </div>
+    </div>
     </div>
     <!-- end pure grid group -->
 
@@ -131,9 +132,9 @@
   </div> <!-- end page -->
 
   <script type="text/javascript">
-    var specVis1 = "js/bubblechart.vg.json";
-    var specVis2 = "js/worldmap.vg.json";
-    var specVis3 = "js/radialplot.vg.json";
+    var specVis1 = "js/worldmap.vg.json";
+    var specVis2 = "js/bubblechart.vg.json";
+    var specVis3 = "js/radialchart.vg.json";
     var specVis4 = "js/barchart.vg.json";
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
