--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- pure grid group -->
     <div class="pure-u-1-1">
         <h2>Population Per Country</h2>
-        <div id="vis1" class="vis-container"></div>
+        <div id="vis1" class="vis-container pure-u-1-1"></div>
     
       <div class="pure-g">
         <div class="pure-u-1-2">
