--- a/index.html
+++ b/index.html
@@ -132,6 +132,20 @@
     <!-- end pure grid group -->
 
     <div class="pure-g">
+      <div class="pure-u-1-3">
+        <div class="description description-left">
+          <h2>Three Equal Columns</h2>
+          <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat
+            sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.</p>
+        </div>
+      </div>
+      <div class="pure-u-2-3">
+        <div id="vis5" class="vis-container"></div>
+      </div>
+    </div>
+
+    <div class="pure-g">
       <div class="pure-u-1-1 small-font">
         <p>This visualisation is created by Kimberly Kurniawan. The datasource is <a href="#" target=" _blank">some data repository online</href>.</p>
       </div>
@@ -145,6 +159,7 @@
     var specVis2 = "js/bubblechart.vg.json";
     var specVis3 = "js/radialchart.vg.json";
     var specVis4 = "js/barchart.vg.json";
+    var specVis5 = "js/donutchart.vg.json;
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
 
