--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       <div class="pure-g">
         <div class="pure-u-1-2">
           <div class="description description-left">
-            <p>China stands as the world's most densely populated nation, with 1,440.30 individuals per million people. 
+            <p>China stands as the world's most densely populated nation, 
+              with 1,440.30 individuals per million people. 
               This statistic carries substantial global significance. China's sheer population size plays a pivotal role 
               in the international arena, shaping its economic and political influence. The country's massive workforce is 
               the driving force behind global manufacturing and trade. However, managing such a vast population</p>
@@ -75,17 +76,18 @@
         <div class="pure-u-1-2">
           <div class="description description-left">
             <p>The bubble chart offers a compelling snapshot of global demographics, 
-              with Niger's fertility rate soaring at 7, contrasting sharply with South Korea's remarkably low rate of 1.1. 
+              with <span style="color: #a6d854"><b>Niger's</b></span> fertility rate soaring at <span style="color: #a6d854"><b>7</b></span>, 
+              contrasting sharply with <span style="color: #66c2a5"><b>South Korea's</b></span> remarkably low rate of <span style="color: #66c2a5"><b>1.1</b></span>. 
               This striking variance reflects divergent societal dynamics, impacting aspects like family size, education, 
-              and workforce demographics. Moreover, the chart exposes migration patterns, with the United States standing 
-              out for its substantial influx of 954,806 individuals. </p>
+              and workforce demographics. Moreover, the chart exposes migration patterns, with the <span style="color: #e78ac3"><b>United States</b></span> standing 
+              out for its substantial influx of <span style="color: #e78ac3"><b>954,806</b></span> individuals. </p>
           </div>
         </div>
 
         <div class="pure-u-1-2">
           <div class="description description-right">
-            <p>In contrast, Venezuela showcases a negative migration rate, 
-              with -653,249 more people leaving than arriving. These figures underscore the complexities of global population dynamics, 
+            <p>In contrast, <span style="color: #80b1d3"><b>Venezuela</b></span> showcases a negative migration rate, 
+              with <span style="color: #80b1d3"><b>-653,249</b></span> more people leaving than arriving. These figures underscore the complexities of global population dynamics, 
               revealing how nations differ significantly in terms of fertility and migration trends. Such insights are invaluable 
               for policymakers and researchers seeking to understand the diverse forces shaping our world.</p>
           </div>
@@ -98,9 +100,9 @@
         <div class="pure-u-1-2">
           <div class="description description-left">
             <h2>Urban Population</h2>
-            <p>The contrasting urban populations in Asia and South America reveal significant trends. 
-              Asia's high urban population reflects rapid urbanization, suggesting economic opportunities and infrastructure challenges.
-               Conversely, South America's lower urban population indicates a more rural distribution, 
+            <p>The contrasting urban populations in <span style="color: #66c2a5"><b>Asia</b></span> and <span style="color: #80b1d3"><b>South America</b></span> reveal significant trends. 
+              <span style="color: #66c2a5"><b>Asia's</b></span> high urban population reflects rapid urbanization, suggesting economic opportunities and infrastructure challenges.
+               Conversely, <span style="color: #80b1d3"><b>South America's</b></span> lower urban population indicates a more rural distribution, 
                highlighting the need for rural development and balanced economic growth. These trends emphasize the importance of 
                tailored regional development strategies. </p>
           </div>
@@ -113,7 +115,7 @@
       <div class="pure-g">
         <div class="pure-u-1-2">
           <h2>Change In Population</h2>
-          <div id="vis5" class="vis-container"></div>
+          <div id="vis5" class="vis-container2"></div>
         </div>
 
         <div class="pure-u-1-2">
@@ -124,12 +126,12 @@
         <div class="pure-u-1-2">
           <div class="description description-left">
             <p>In this visual representation, the outer donut serves as a lens into the absolute population change, 
-              revealing significant disparities across continents. Asia leads the pack with a substantial increase of 873,823.10, 
-              while Europe shows the smallest change at 9,788.80.<p>
+              revealing significant disparities across continents. <span style="color: #66c2a5"><b>Asia</b></span> leads the pack with a substantial increase of <span style="color: #66c2a5"><b>873,823.10</b></span>, 
+              while <span style="color: #8da0cb"><b>Europe</b></span> shows the smallest change at <span style="color: #8da0cb"><b>9,788.80</b></span>.<p>
 
             </p>Concurrently, the inner donut offers insights into the percentage population change. 
-            Here, Africa shines with a remarkable rate of 2.29%, demonstrating its robust demographic dynamics. Conversely, 
-            Europe displays the lowest percentage change at 0.08%.</p>
+            Here, <span style="color: #a6d854"><b>Africa</b></span> shines with a remarkable rate of <span style="color: #a6d854"><b>2.29%</b></span>, demonstrating its robust demographic dynamics. Conversely, 
+            <span style="color: #8da0cb"><b>Europe</b></span> displays the lowest percentage change at <span style="color: #8da0cb"><b>0.08%</b></span>.</p>
               
           </p>This dual-donut visualization effectively highlights the multifaceted nature of global population shifts, 
           providing a comprehensive view of both absolute and relative changes across continents.</p>
@@ -139,17 +141,17 @@
         <div class="pure-u-1-2">
           <div class="description description-left">
             <p>The median age across continents, 
-              shows valuable insights into global demographics. Europe stands out with the highest median age of 41.95, 
+              shows valuable insights into global demographics. <span style="color: #8da0cb"><b>Europe</b></span> stands out with the highest median age of <span style="color: #8da0cb"><b>41.95</b></span>, 
               indicative of an aging population. This aging demographic in Europe presents challenges related to healthcare, 
               pension systems, and workforce dynamics.</p>
 
-            </p>Africa's remarkably low median age of 21.19 signifies a predominantly youthful population, 
-            presenting an exceptional opportunity for economic growth and development. This demographic characteristic can be a 
+            </p><span style="color: #a6d854"><b>Africa's</b></span> remarkably low median age of <span style="color: #a6d854"><b>21.19</b></span> signifies a predominantly youthful population, 
+            presenting an opportunity for economic growth and development. This demographic characteristic can be a 
             driving force for innovation and increased productivity, making it crucial to invest in education, healthcare, 
-            and job opportunities to unlock Africa's potential as a global economic powerhouse.</p> 
+            and job opportunities to increase the life expectancy in Africa.</p> 
               
           </p> Varying median ages across continents underscore the need for region-specific policies, 
-          with Europe addressing challenges of an aging population and Africa capitalizing on its youthful demographic, 
+          with <span style="color: #8da0cb"><b>Europe</b></span> addressing challenges of an aging population and <span style="color: #a6d854"><b>Africa</b></span> capitalizing on its youthful demographic, 
           crucial for policymakers and businesses.</p>
           </div>
         </div>
@@ -175,7 +177,7 @@
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
         <p>This visualisation is created by Kimberly Kurniawan.</p>
-          <p>The datasource is <a href="#" target=" _blank">some data repository online</href>.</p>
+          <p>The datasource is <a href="https://www.kaggle.com/datasets/tanuprabhu/population-by-country-2020" target=" _blank">Population by Country - 2020</href>.</p>
       </div>
     </div>
 
