--- a/index.html
+++ b/index.html
@@ -157,22 +157,6 @@
         </div>
       </div>
     <!-- end pure grid group -->
-    <!--
-    <div class="pure-g">
-      <div class="pure-u-1-1">
-        <h2>Three Equal Columns</h2>
-        <div id="vis5" class="vis-container"></div>
-      </div>
-
-      <div class="pure-u-1-1">
-        <div class="description description-left">
-          <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat
-            sed. Egestas purus viverra accumsan in nisl. Egestas purus viverra accumsan in nisl.</p>
-        </div>
-      </div>
-    </div>
-  -->
 
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
@@ -193,9 +177,7 @@
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
 
-    vegaEmbed('#vis2', specVis2, { "actions": false }).then(function (result) {
-      // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-    }).catch(console.error);
+    vegaEmbed('#vis2', specVis2, { "actions": false }).then(function (result) {}).catch(console.error);
 
     vegaEmbed('#vis3', specVis3, { "actions": false });
 
@@ -203,13 +185,6 @@
 
     vegaEmbed('#vis5', specVis5, { "actions": false });
 
-    // vegaEmbed('#vis3', specVis1, { "actions": false }).then(function (result) {
-    //   // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-    // }).catch(console.error);
-
-   // vegaEmbed('#vis4', specVis2, { "actions": false }).then(function (result) {
-      // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-   // }).catch(console.error);
   </script>
 </body>
 
