--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <div class="pure-g">
       <div class="pure-u-1-1 small-font">
         <p>This visualisation is created by Kimberly Kurniawan.</p>
-          <p>The datasource is <a href="https://www.kaggle.com/datasets/tanuprabhu/population-by-country-2020" target=" _blank">Population by Country - 2020</href>.</p>
+          <p>The datasource used is <a href="https://www.kaggle.com/datasets/tanuprabhu/population-by-country-2020" target=" _blank">Population by Country - 2020</href></a> & <a href="https://www.kaggle.com/datasets/iamsouravbanerjee/world-population-dataset" target=" _blank">World Population Dataset</href>.</a></p>
       </div>
     </div>
 
@@ -184,7 +184,7 @@
     vegaEmbed('#vis4', specVis4, { "actions": false });
 
     vegaEmbed('#vis5', specVis5, { "actions": false });
-
+    
   </script>
 </body>
 
