--- a/index.html
+++ b/index.html
@@ -38,28 +38,28 @@
           <p>This visualisation caters to researchers, policymakers, and the general public. 
             Researchers can explore population trends and societal impacts, while policymakers can make informed decisions. 
             It also serves as an educational resource for students, educators, and journalists, offering insights into 
-            global population dynamics based on various variables. The data is based of the world population in 2020.</p>
+            global population dynamics based on various variables. The data is based on the world population in 2020.</p>
         </div>
       </div>
       <div class="pure-u-1-1">
-        <h2>Population Per Country</h2>
+        <h2>Population by Country</h2>
         <div id="vis1" class="vis-container pure-u-1-1"></div>
     
       <div class="pure-g">
         <div class="pure-u-1-2">
           <div class="description description-left">
-            <p>China stands as the world's most densely populated nation, 
-              with 1,440.30 individuals per million people. 
+            <p>China stands as the world's most populated nation, 
+              with 1,440,297,825 individuals. 
               This statistic carries substantial global significance. China's sheer population size plays a pivotal role 
-              in the international arena, shaping its economic and political influence. The country's massive workforce is 
-              the driving force behind global manufacturing and trade. However, managing such a vast population</p>
+              in the international level, shaping its economic and political influence. The country's massive industry is 
+              the driving force behind global manufacturing and trade. However, managing such a vast population presents unique challenges, </p>
           </div>
         </div>
 
         <div class="pure-u-1-2">
           <div class="description description-right">
             <p>
-              presents unique challenges, particularly in terms of ensuring equitable resource distribution and long-term sustainability. 
+              particularly in terms of ensuring equitable resource distribution and long-term sustainability. 
               China also grapples with the complexities of an aging population and regional demographic disparities. 
               These factors make it imperative to fathom the profound impact of China on the global stage, 
               as it significantly shapes the world's economic and political landscapes.  </p>
@@ -72,7 +72,7 @@
         <h2>Fertility Rate vs Migrantions</h2>
         <div id="vis2" class="vis-container"></div>
       </div>
-      <div class="pure-g">
+      <div class="pure-g margin-bottom">
         <div class="pure-u-1-2">
           <div class="description description-left">
             <p>The bubble chart offers a compelling snapshot of global demographics, 
@@ -96,7 +96,7 @@
     </div>
 
     <!-- pure grid group -->
-      <div class="pure-g">
+      <div class="pure-g margin-bottom">
         <div class="pure-u-1-2">
           <div class="description description-left">
             <h2>Urban Population</h2>
@@ -112,7 +112,7 @@
         </div>
       </div>
 
-      <div class="pure-g">
+      <div class="pure-g margin-bottom">
         <div class="pure-u-1-2">
           <h2>Change In Population</h2>
           <div id="vis5" class="vis-container2"></div>
@@ -142,8 +142,8 @@
           <div class="description description-left">
             <p>The median age across continents, 
               shows valuable insights into global demographics. <span style="color: #8da0cb"><b>Europe</b></span> stands out with the highest median age of <span style="color: #8da0cb"><b>41.95</b></span>, 
-              indicative of an aging population. This aging demographic in Europe presents challenges related to healthcare, 
-              pension systems, and workforce dynamics.</p>
+              indicative of an aging population. This aging demographic in Europe is due to its low fertility rate however there is an increase in life expectancy and migration,
+              this could be highly related to Europe's healthcare and pension systems.</p>
 
             </p><span style="color: #a6d854"><b>Africa's</b></span> remarkably low median age of <span style="color: #a6d854"><b>21.19</b></span> signifies a predominantly youthful population, 
             presenting an opportunity for economic growth and development. This demographic characteristic can be a 
@@ -156,9 +156,8 @@
           </div>
         </div>
       </div>
-    <!-- end pure grid group -->
 
-    <div class="pure-g">
+    <div class="pure-g margin-bottom">
       <div class="pure-u-1-1 small-font">
         <p>This visualisation is created by Kimberly Kurniawan.</p>
           <p>The datasource used is <a href="https://www.kaggle.com/datasets/tanuprabhu/population-by-country-2020" target=" _blank">Population by Country - 2020</href></a> & <a href="https://www.kaggle.com/datasets/iamsouravbanerjee/world-population-dataset" target=" _blank">World Population Dataset</href>.</a></p>
@@ -184,7 +183,6 @@
     vegaEmbed('#vis4', specVis4, { "actions": false });
 
     vegaEmbed('#vis5', specVis5, { "actions": false });
-    
   </script>
 </body>
 
