updated html and json

--- a/index.html
+++ b/index.html
@@ -48,21 +48,20 @@
       <div class="pure-g">
         <div class="pure-u-1-2">
           <div class="description description-left">
-            <p>China stands as the world's most populated nation, 
-              with 1,440,297,825 individuals. 
-              This statistic carries substantial global significance. China's sheer population size plays a pivotal role 
-              in the international level, shaping its economic and political influence. The country's massive industry is 
-              the driving force behind global manufacturing and trade. However, managing such a vast population presents unique challenges, </p>
+            <p>The map illustrates the global population distribution by country for the year 2020. Using a gradient 
+              from light yellow to dark green to represent population sizes, countries like China and India stand out 
+              with the darkest shades, indicating the highest populations. Conversely, regions like Canada, Australia, 
+              and parts </p>
           </div>
         </div>
 
         <div class="pure-u-1-2">
           <div class="description description-right">
             <p>
-              particularly in terms of ensuring equitable resource distribution and long-term sustainability. 
-              China also grapples with the complexities of an aging population and regional demographic disparities. 
-              These factors make it imperative to fathom the profound impact of China on the global stage, 
-              as it significantly shapes the world's economic and political landscapes.  </p>
+              of North Africa exhibit lighter colors, signifying lower populations. 
+              The population density in regions like Western Africa, the USA, and Brazil is moderate, 
+              while Europe displays a relatively even distribution. The map offers zoom controls and centering options for 
+              more detailed exploration of specific regions.  </p>
           </div>
         </div>
         </div>
@@ -75,21 +74,23 @@
       <div class="pure-g margin-bottom">
         <div class="pure-u-1-2">
           <div class="description description-left">
-            <p>The bubble chart offers a compelling snapshot of global demographics, 
-              with <span style="color: #a6d854"><b>Niger's</b></span> fertility rate soaring at <span style="color: #a6d854"><b>7</b></span>, 
-              contrasting sharply with <span style="color: #66c2a5"><b>South Korea's</b></span> remarkably low rate of <span style="color: #66c2a5"><b>1.1</b></span>. 
-              This striking variance reflects divergent societal dynamics, impacting aspects like family size, education, 
-              and workforce demographics. Moreover, the chart exposes migration patterns, with the <span style="color: #e78ac3"><b>United States</b></span> standing 
-              out for its substantial influx of <span style="color: #e78ac3"><b>954,806</b></span> individuals. </p>
+            <p> The bubble chart depicts the relationship between a country's fertility rate and its number of migrants 
+              for the year 2020. Bubbles are colour-coded based on continents and sized according to the population of 
+              the respective country. Most countries cluster between 1 and 3 in fertility rate, 
+              showing little net migration (close to zero). The <span style="color: #e78ac3"><b>United States</b></span>
+              stands out with a higher number of migrants 
+              and a fertility rate near 2. </p>
           </div>
         </div>
 
         <div class="pure-u-1-2">
           <div class="description description-right">
-            <p>In contrast, <span style="color: #80b1d3"><b>Venezuela</b></span> showcases a negative migration rate, 
-              with <span style="color: #80b1d3"><b>-653,249</b></span> more people leaving than arriving. These figures underscore the complexities of global population dynamics, 
-              revealing how nations differ significantly in terms of fertility and migration trends. Such insights are invaluable 
-              for policymakers and researchers seeking to understand the diverse forces shaping our world.</p>
+            <p>Conversely, <span style="color: #80b1d3"><b>Venezuela</b></span> 
+              exhibits a significant negative migration but also falls within 
+              the same fertility range. The size of the bubbles indicates that densely populated nations like those in 
+              <span style="color: #66c2a5"><b>Asia</b></span> and <span style="color: #a6d854"><b>Africa</b></span> 
+              tend to have higher fertility rates. The option to filter by continent and minimum population offers 
+              users the flexibility to narrow down the analysis to specific regions or countries of interest.</p>
           </div>
         </div>
         </div>
@@ -100,11 +101,17 @@
         <div class="pure-u-1-2">
           <div class="description description-left">
             <h2>Urban Population</h2>
-            <p>The contrasting urban populations in <span style="color: #66c2a5"><b>Asia</b></span> and <span style="color: #80b1d3"><b>South America</b></span> reveal significant trends. 
-              <span style="color: #66c2a5"><b>Asia's</b></span> high urban population reflects rapid urbanization, suggesting economic opportunities and infrastructure challenges.
-               Conversely, <span style="color: #80b1d3"><b>South America's</b></span> lower urban population indicates a more rural distribution, 
-               highlighting the need for rural development and balanced economic growth. These trends emphasize the importance of 
-               tailored regional development strategies. </p>
+            <p> The radial chart showcases the urban population change by continent. <span style="color: #66c2a5"><b>Asia</b></span>, 
+              represented by the largest segment in green, indicates a significant urban population growth or size 
+              compared to other continents. <span style="color: #a6d854"><b>Africa</b></span>, though smaller than 
+              <span style="color: #66c2a5"><b>Asia</b></span>, still occupies a noteworthy portion, 
+              suggesting a substantial urban population shift. <span style="color: #8da0cb"><b>Europe</b></span>, 
+              <span style="color: #e78ac3"><b>North America</b></span>, and <span style="color: #ffd92f"><b>Oceania</b></span> 
+              have smaller segments, implying less dramatic urban population changes in these regions. 
+              <span style="color: #80b1d3"><b>South America's</b></span> contribution is the smallest, 
+              hinting at minimal urban population variation. The chart also provides an option to adjust for minimum population, 
+              which may further refine the data representation. Overall, the most pronounced urban population changes or sizes 
+              seem to be occurring in <span style="color: #66c2a5"><b>Asia</b></span> and <span style="color: #a6d854"><b>Africa</b></span>. </p>
           </div>
         </div>
         <div class="pure-u-1-2">
@@ -125,34 +132,43 @@
 
         <div class="pure-u-1-2">
           <div class="description description-left">
-            <p>In this visual representation, the outer donut serves as a lens into the absolute population change, 
-              revealing significant disparities across continents. <span style="color: #66c2a5"><b>Asia</b></span> leads the pack with a substantial increase of <span style="color: #66c2a5"><b>873,823.10</b></span>, 
-              while <span style="color: #8da0cb"><b>Europe</b></span> shows the smallest change at <span style="color: #8da0cb"><b>9,788.80</b></span>.<p>
-
-            </p>Concurrently, the inner donut offers insights into the percentage population change. 
-            Here, <span style="color: #a6d854"><b>Africa</b></span> shines with a remarkable rate of <span style="color: #a6d854"><b>2.29%</b></span>, demonstrating its robust demographic dynamics. Conversely, 
-            <span style="color: #8da0cb"><b>Europe</b></span> displays the lowest percentage change at <span style="color: #8da0cb"><b>0.08%</b></span>.</p>
+            <p>The double donut chart vividly illustrates the change in population across continents, 
+              with each concentric circle potentially representing different metrics or timeframes. Dominating both donuts, 
+              <span style="color: #66c2a5"><b>Asia's</b></span> segment showcases the most substantial population dynamics, 
+              closely followed by <span style="color: #a6d854"><b>Africa</b></span>. 
+              Although the outer donut positions <span style="color: #a6d854"><b>Africa's</b></span> change as less significant 
+              compared to <span style="color: #66c2a5"><b>Asia</b></span>, the inner ring suggests 
+              a rising trend for <span style="color: #a6d854"><b>Africa</b></span>, narrowing the gap. 
+              <span style="color: #8da0cb"><b>Europe</b></span>, <span style="color: #e78ac3"><b>North America</b></span>, 
+              <span style="color: #ffd92f"><b>Oceania</b></span> , and <span style="color: #80b1d3"><b>South America</b></span>, 
+              portrayed in hues which occupy smaller portions in both rings. Notably, variations between the two rings highlight 
+              different population metrics or trends for these continents.<p>
               
-          </p>This dual-donut visualization effectively highlights the multifaceted nature of global population shifts, 
+          </p>This dual-donut visualisation effectively highlights the multifaceted nature of global population shifts, 
           providing a comprehensive view of both absolute and relative changes across continents.</p>
           </div>
         </div>
 
         <div class="pure-u-1-2">
           <div class="description description-left">
-            <p>The median age across continents, 
-              shows valuable insights into global demographics. <span style="color: #8da0cb"><b>Europe</b></span> stands out with the highest median age of <span style="color: #8da0cb"><b>41.95</b></span>, 
-              indicative of an aging population. This aging demographic in Europe is due to its low fertility rate however there is an increase in life expectancy and migration,
-              this could be highly related to Europe's healthcare and pension systems.</p>
+            <p>The graph depicts the median age by continent, 
+              represented through horizontal bars of varying lengths. 
+              <span style="color: #8da0cb"><b>Europe</b></span> stands out with the highest median age, 
+              indicated by an average of 41.95 years of age
+              , suggesting an older population and lower birth rates. <span style="color: #e78ac3"><b>North America</b></span>, 
+              follows, indicating an aging population but slightly younger than <span style="color: #8da0cb"><b>Europe</b></span>. 
+              <span style="color: #ffd92f"><b>Oceania</b></span>,
+               has a median age somewhere in between <span style="color: #66c2a5"><b>Asia</b></span> and 
+               <span style="color: #e78ac3"><b>North America</b></span>. <span style="color: #66c2a5"><b>Asia</b></span> 
+               and <span style="color: #80b1d3"><b>South America</b></span>, exhibit younger median ages, 
+               possibly due to higher birth rates or a younger population in general. 
+               <span style="color: #a6d854"><b>Africa</b></span>, has the lowest median age, alluding to a 
+               predominantly younger population.</p>
 
-            </p><span style="color: #a6d854"><b>Africa's</b></span> remarkably low median age of <span style="color: #a6d854"><b>21.19</b></span> signifies a predominantly youthful population, 
-            presenting an opportunity for economic growth and development. This demographic characteristic can be a 
-            driving force for innovation and increased productivity, making it crucial to invest in education, healthcare, 
-            and job opportunities to increase the life expectancy in Africa.</p> 
+            </p>Overall, the graph provides a clear snapshot of the age distribution across continents, highlighting the aging trends in 
+            <span style="color: #8da0cb"><b>Europe</b></span> and <span style="color: #e78ac3"><b>North America</b></span>, 
+            and the youth-centric demographic in <span style="color: #a6d854"><b>Africa</b></span>.</p> 
               
-          </p> Varying median ages across continents underscore the need for region-specific policies, 
-          with <span style="color: #8da0cb"><b>Europe</b></span> addressing challenges of an aging population and <span style="color: #a6d854"><b>Africa</b></span> capitalizing on its youthful demographic, 
-          crucial for policymakers and businesses.</p>
           </div>
         </div>
       </div>
